tests/snapshots/cli__reference_files@grouping__21.grouping.snap
---
source: tests/cli.rs
expression: test_output
input_file: test-files/grouping/21.grouping
---
status: 0
stdout:
  - "111880.5846"
stderr: []
