tests/snapshots/cli__reference_files@grouping__22.grouping.snap
---
source: tests/cli.rs
expression: test_output
input_file: test-files/grouping/22.grouping
---
status: 0
stdout:
  - "1126042401155741.8"
stderr: []
