tests/snapshots/cli__reference_files@grouping__25.grouping.snap
---
source: tests/cli.rs
expression: test_output
input_file: test-files/grouping/25.grouping
---
status: 0
stdout:
  - "311551.39582341164"
stderr: []
