tests/snapshots/cli__reference_files@grouping__3.grouping.snap
---
source: tests/cli.rs
expression: test_output
input_file: test-files/grouping/3.grouping
---
status: 0
stdout:
  - "-4597569122907923"
stderr: []
