tests/snapshots/cli__reference_files@grouping__4.grouping.snap
---
source: tests/cli.rs
expression: test_output
input_file: test-files/grouping/4.grouping
---
status: 0
stdout:
  - "2340"
stderr: []
