tests/snapshots/cli__reference_files@grouping__5.grouping.snap
---
source: tests/cli.rs
expression: test_output
input_file: test-files/grouping/5.grouping
---
status: 0
stdout:
  - "-1026572879066372000000"
stderr: []
