tests/snapshots/cli__reference_files@grouping__6.grouping.snap
---
source: tests/cli.rs
expression: test_output
input_file: test-files/grouping/6.grouping
---
status: 0
stdout:
  - "3567670648.254171"
stderr: []
